cluster/analyzer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer
  labels:
    app: analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzer
  template:
    metadata:
      labels:
        app: analyzer
    spec:
      containers:
        - name: analyzer
          image: natlg/analyzer:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: analyzer
  labels:
    app: analyzer
spec:
  type: NodePort
  ports:
    - name: http
      targetPort: http
      protocol: TCP
      port: 8081
      nodePort: 30081
  selector:
    app: analyzer
