cluster/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: natlg/worker:latest
          imagePullPolicy: Never
          securityContext:
            privileged: true
          ports:
            - name: localstack
              containerPort: 4566
              protocol: TCP
            - name: sqs
              containerPort: 4576
            - name: lambda
              containerPort: 4574
            - name: s3
              containerPort: 4572
          volumeMounts:
            - name: docker-sock
              mountPath: "/var/run/"
            - name: datadir
              mountPath: /tmp/localstack
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/
        - name: datadir
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    app: worker
spec:
  type: NodePort
  ports:
    - name: localstack
      targetPort: localstack
      protocol: TCP
      port: 4566
    - name: sqs
      targetPort: sqs
      protocol: TCP
      port: 4576
    - name: lambda
      targetPort: lambda
      protocol: TCP
      port: 4574
    - name: s3
      targetPort: s3
      protocol: TCP
      port: 4572
  selector:
    app: worker
