cluster/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /publish/*
          backend:
            serviceName: publisher
            servicePort: 8085
        - path: /analyze/*
          backend:
            serviceName: analyzer
            servicePort: 8081
